objects/Time_and_Expense_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Attendee_1_Agency_Name__c</fullName>
        <formula>Attendee_1__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attendee 1 Agency Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attendee 1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Time and Expense Details</relationshipLabel>
        <relationshipName>Time_and_Expense_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attendee_2_Agency_Name__c</fullName>
        <formula>Attendee_2__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attendee 2 Agency Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attendee 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Time and Expense Details (Attendee 2)</relationshipLabel>
        <relationshipName>Time_and_Expense_Details1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attendee_3_Agency_Name__c</fullName>
        <formula>Attendee_3__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attendee 3 Agency Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attendee 3</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Time and Expense Details (Attendee 3)</relationshipLabel>
        <relationshipName>Time_and_Expense_Details2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attendee_Comments__c</fullName>
        <label>Attendee Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <inlineHelpText>Expense details</inlineHelpText>
        <label>Comment</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Exp_Type__c</fullName>
        <label>Exp Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Airfare</fullName>
                </value>
                <value>
                    <fullName>Car Milage</fullName>
                </value>
                <value>
                    <fullName>Car Rental</fullName>
                </value>
                <value>
                    <fullName>Car Service</fullName>
                </value>
                <value>
                    <fullName>Charitable Contributions</fullName>
                </value>
                <value>
                    <fullName>Cocktails</fullName>
                </value>
                <value>
                    <fullName>Entertainment</fullName>
                </value>
                <value>
                    <fullName>Gas or Tolls</fullName>
                </value>
                <value>
                    <fullName>Hotel Lodging</fullName>
                </value>
                <value>
                    <fullName>Meals</fullName>
                </value>
                <value>
                    <fullName>MTA Bus or Subway</fullName>
                </value>
                <value>
                    <fullName>Office Exp</fullName>
                </value>
                <value>
                    <fullName>Office Supplies</fullName>
                </value>
                <value>
                    <fullName>Parking</fullName>
                </value>
                <value>
                    <fullName>Taxi</fullName>
                </value>
                <value>
                    <fullName>Trade Show Ent.</fullName>
                </value>
                <value>
                    <fullName>Train</fullName>
                </value>
                <value>
                    <fullName>Wireless Reimbursement</fullName>
                </value>
                <value>
                    <fullName>Gifts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_and_Expense__c</fullName>
        <label>Time and Expense</label>
        <referenceTo>Time_and_Expense__c</referenceTo>
        <relationshipLabel>Time and Expense Details</relationshipLabel>
        <relationshipName>Time_and_Expense_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Transaction_Date_del__c</fullName>
        <inlineHelpText>Receipt Date</inlineHelpText>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vendor_Description__c</fullName>
        <label>Vendor Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Time and Expense Detail</label>
    <nameField>
        <displayFormat>TED-{0000}</displayFormat>
        <label>Time and Expense Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time and Expense Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>